--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
-	<script type="text/javascript" src="script2.js"></script>
+	
+	<!-- <script type="text/javascript" src="script2.js"></script> -->
 	<title>BLACKJ4CK</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
 		<div id="board"></div>
 		<div id="dealer"></div>
 		<div id="player"></div>
-
-
+		<button id="start">Start</button>
+		<div id="score"><h2>playerBankRoll</h1></div>
 
 	</div>
-
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
