adding DOM elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="dealer"></div>
 		<div id="player"></div>
 		<button id="start">Start</button>
-		<div id="score"><h2>playerBankRoll</h1></div>
+		<div id="score"></div>
 
 	</div>
 <script type="text/javascript" src="script.js"></script>
