adding more DOM elements, fixing logic

--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
 		<div id="board"></div>
 		<div id="dealer"></div>
 		<div id="player"></div>
+		<div id="one" class="chips"></div>
+		<div id="five" class="chips"></div>
+		<div id="twenty5" class="chips"></div>
+		<div id="fifty" class="chips"></div>
+		<div id="one00" class="chips"></div>
+		<div id="five00" class="chips"></div>
 		<button id="start">Start</button>
-		<div id="score"></div>
+
+		<div id="current-payroll"></div>
+		<div id="bet-amount"></div>
 
 	</div>
 <script type="text/javascript" src="script.js"></script>
