fixing bugs and adding more graphic elements

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		<button id="start">Start</button>
 
 		<div id="current-payroll"></div>
-		<div id="bet-amount"></div>
+		<div id="bet-amount"></div></br>
+		<div id="payout"></div></br>
+		<div id="actions"></div>
 
 	</div>
 <script type="text/javascript" src="script.js"></script>
