debugging and finalizing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title>BLACKJ4CK</title>
 </head>
 <body>
-	<h1>The Grind</h1>
+	<h1>Blackjack</h1>
+	<button id="restart">Restart?</button>
 	<div id="container">
 		<div id="board"></div>
 		<div id="dealer"></div>
